04/29/2005   Ian Lewis <IanLewis@member.fsf.org>

    * Added support for adding entity reference nodes to the tree.

04/28/2005   Ian Lewis <IanLewis@member.fsf.org>
    
    * Updated the options panel to conform to the new OptionsPanel interface in
      jsXe core.
    * Made add, remove, and rename node actions into their own files and added
      them as actions for this plugin.

04/27/2005   Ian Lewis <IanLewis@member.fsf.org>

    * The Add Element context menu when using a DTD/Schema now has a 'More' menu
      that expands the menu.
    * Updated the EditTagDialog to use the Messages class
    * Changed the text pane to use a monospaced font

04/26/2005   Ian Lewis <IanLewis@member.fsf.org>

    * Added an Edit Tag Dialog to edit elements defined in an XML Schema.

04/18/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the context menu for the tree to not allow you to invalidate
      a document by adding a new node that isn't in the completion info.

04/17/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the context menu to add elements to show elements that are
      allowed as children based on the DTD/Schema

03/30/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed problem with entering new attributes after you reverse the order
      of the columns.

03/17/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added much better namespace support.
        * Requires jsXe 0.3.16 now
    * Added support for adding attributes where a value is required

03/08/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated to work with jsXe's new plugin dependency checking.

03/04/2005  version 0.3 pre15   Ian Lewis <IanLewis@member.fsf.org>

    * Updated to work with jsXe 0.3 pre15

01/08/2005  version 0.3 pre9    Ian Lewis <IanLewis@member.fsf.org>

    * Updated so that getVersion() works properly;

01/05/2005  version 0.3 pre7    Ian Lewis <IanLewis@member.fsf.org>

    * Updated for new plugin API
