@@ -1,8 +1,12 @@
-04/29/2005   Ian Lewis <IanLewis@member.fsf.org>
+05/01/2005  Ian Lewis <IanLewis@member.fsf.org>
+
+    * using the EnhancedMenu class in the tree view now.
+
+04/29/2005  Ian Lewis <IanLewis@member.fsf.org>
 
     * Added support for adding entity reference nodes to the tree.
 
-04/28/2005   Ian Lewis <IanLewis@member.fsf.org>
+04/28/2005  Ian Lewis <IanLewis@member.fsf.org>
     
     * Updated the options panel to conform to the new OptionsPanel interface in
       jsXe core.
